test: applyId 검증 로직 수정
getFirst() 메서드를 사용하여 첫 번째 요소를 명확하게 가져오도록 변경했습니다.